fix: append module path to sys in test ipynb

--- a/test_ipynbs/quasi-order-gen.ipynb
+++ b/test_ipynbs/quasi-order-gen.ipynb
@@ -1,140 +1,112 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Testing the quasi-order generation on the PISA dataset, comparing to the KST library by Milan Segedinac"
-      ],
       "metadata": {
         "id": "cw9gSDCONN4s"
-      }
+      },
+      "source": [
+        "# Testing the quasi-order generation on the PISA dataset, comparing to the KST library by Milan Segedinac"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "1. Importing both libraries and requirements"
-      ],
       "metadata": {
         "id": "gH1gF08aNy22"
-      }
+      },
+      "source": [
+        "1. Importing both libraries and requirements"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bvA-pXFUN36a",
+        "outputId": "5fea651f-1330-458e-abb9-29e1be9000e1"
+      },
+      "outputs": [],
       "source": [
         "!git clone https://github.com/Alexe1900/iita_python.git\n",
         "!git clone https://github.com/milansegedinac/kst.git\n",
         "!pip install numpy\n",
         "!pip install pandas\n",
         "!pip install -r kst/requirements.txt\n",
+        "import sys\n",
+        "sys.path.append(\"/content/iita_python\")\n",
+        "sys.path.append(\"/content/kst/learning_spaces/kst\")\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import iita_python as iita\n",
-        "import sys\n",
-        "sys.path.append(\"/content/kst/learning_spaces/kst\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bvA-pXFUN36a",
-        "outputId": "7c7b209a-044f-4419-9ff7-660c53840fd9"
-      },
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: destination path 'iita_python' already exists and is not an empty directory.\n",
-            "fatal: destination path 'kst' already exists and is not an empty directory.\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (2.0.2)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.12/dist-packages (2.2.2)\n",
-            "Requirement already satisfied: numpy>=1.26.0 in /usr/local/lib/python3.12/dist-packages (from pandas) (2.0.2)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas) (2.9.0.post0)\n",
-            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas) (2025.2)\n",
-            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas) (2025.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-            "Collecting cycler==0.11.0 (from -r kst/requirements.txt (line 1))\n",
-            "  Using cached cycler-0.11.0-py3-none-any.whl.metadata (785 bytes)\n",
-            "Collecting fonttools==4.28.2 (from -r kst/requirements.txt (line 2))\n",
-            "  Using cached fonttools-4.28.2-py3-none-any.whl.metadata (117 kB)\n",
-            "Collecting kiwisolver==1.3.2 (from -r kst/requirements.txt (line 3))\n",
-            "  Using cached kiwisolver-1.3.2.tar.gz (54 kB)\n",
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Collecting matplotlib==3.5.0 (from -r kst/requirements.txt (line 4))\n",
-            "  Using cached matplotlib-3.5.0.tar.gz (35.0 MB)\n",
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Collecting nose==1.3.7 (from -r kst/requirements.txt (line 5))\n",
-            "  Using cached nose-1.3.7-py3-none-any.whl.metadata (1.7 kB)\n",
-            "\u001b[31mERROR: Ignored the following versions that require a different python version: 1.21.2 Requires-Python >=3.7,<3.11; 1.21.3 Requires-Python >=3.7,<3.11; 1.21.4 Requires-Python >=3.7,<3.11; 1.21.5 Requires-Python >=3.7,<3.11; 1.21.6 Requires-Python >=3.7,<3.11\u001b[0m\u001b[31m\n",
-            "\u001b[0m\u001b[31mERROR: Could not find a version that satisfies the requirement numpy==1.21.4 (from versions: 1.3.0, 1.4.1, 1.5.0, 1.5.1, 1.6.0, 1.6.1, 1.6.2, 1.7.0, 1.7.1, 1.7.2, 1.8.0, 1.8.1, 1.8.2, 1.9.0, 1.9.1, 1.9.2, 1.9.3, 1.10.0.post2, 1.10.1, 1.10.2, 1.10.4, 1.11.0, 1.11.1, 1.11.2, 1.11.3, 1.12.0, 1.12.1, 1.13.0, 1.13.1, 1.13.3, 1.14.0, 1.14.1, 1.14.2, 1.14.3, 1.14.4, 1.14.5, 1.14.6, 1.15.0, 1.15.1, 1.15.2, 1.15.3, 1.15.4, 1.16.0, 1.16.1, 1.16.2, 1.16.3, 1.16.4, 1.16.5, 1.16.6, 1.17.0, 1.17.1, 1.17.2, 1.17.3, 1.17.4, 1.17.5, 1.18.0, 1.18.1, 1.18.2, 1.18.3, 1.18.4, 1.18.5, 1.19.0, 1.19.1, 1.19.2, 1.19.3, 1.19.4, 1.19.5, 1.20.0, 1.20.1, 1.20.2, 1.20.3, 1.21.0, 1.21.1, 1.22.0, 1.22.1, 1.22.2, 1.22.3, 1.22.4, 1.23.0, 1.23.1, 1.23.2, 1.23.3, 1.23.4, 1.23.5, 1.24.0, 1.24.1, 1.24.2, 1.24.3, 1.24.4, 1.25.0, 1.25.1, 1.25.2, 1.26.0, 1.26.1, 1.26.2, 1.26.3, 1.26.4, 2.0.0, 2.0.1, 2.0.2, 2.1.0, 2.1.1, 2.1.2, 2.1.3, 2.2.0, 2.2.1, 2.2.2, 2.2.3, 2.2.4, 2.2.5, 2.2.6, 2.3.0, 2.3.1, 2.3.2, 2.3.3, 2.3.4)\u001b[0m\u001b[31m\n",
-            "\u001b[0m\u001b[31mERROR: No matching distribution found for numpy==1.21.4\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
-          ]
-        }
+        "import iita_python as iita"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "2. Importing the dataset"
-      ],
       "metadata": {
         "id": "CwlVMK3MO3QJ"
-      }
+      },
+      "source": [
+        "2. Importing the dataset"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FvSAv-4cOWQp",
+        "outputId": "f94df18c-5cbc-4bd2-d9ac-51adf2c0d930"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Data imported successfully ✅\n"
+          ]
+        }
+      ],
       "source": [
         "from iita_python.utils import read_rp\n",
         "\n",
         "data_raw = read_rp(\"iita_python/test_ipynbs/pisa.csv\")\n",
         "assert not data_raw.empty\n",
         "print(\"Data imported successfully ✅\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FvSAv-4cOWQp",
-        "outputId": "6d25dd46-edf8-4498-a02a-957d495ccacb"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Data imported successfully ✅\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "3. Counting the counterexamples"
-      ],
       "metadata": {
         "id": "UVRNzocZTCZC"
-      }
+      },
+      "source": [
+        "3. Counting the counterexamples"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lWysv1UsTGPf",
+        "outputId": "4ebbd94c-6a8d-43dc-a3c5-2e1dce8832be"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Counterexamples computed correctly ✅\n"
+          ]
+        }
+      ],
       "source": [
         "data = iita.Dataset(data_raw)\n",
         "\n",
@@ -146,36 +118,51 @@
         "  print(\"Counterexamples computed correctly ✅\")\n",
         "except AssertionError:\n",
         "  print(\"Counterexamples computed incorrectly ❌\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lWysv1UsTGPf",
-        "outputId": "19c31e24-ddc7-40af-e7f7-6ed6502a9174"
-      },
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Counterexamples computed correctly ✅\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "4. Generating the quasi-orders"
-      ],
       "metadata": {
         "id": "H7X3tEf7bGdt"
-      }
+      },
+      "source": [
+        "4. Generating the quasi-orders"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ywvri9o8bGA0",
+        "outputId": "8605bb75-f26f-4244-b067-66ef3f66a020"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Correct number of quasi-orders ✅\n",
+            "Quasi-order 0/13 correct ✅\n",
+            "Quasi-order 1/13 correct ✅\n",
+            "Quasi-order 2/13 correct ✅\n",
+            "Quasi-order 3/13 correct ✅\n",
+            "Quasi-order 4/13 correct ✅\n",
+            "Quasi-order 5/13 correct ✅\n",
+            "Quasi-order 6/13 correct ✅\n",
+            "Quasi-order 7/13 correct ✅\n",
+            "Quasi-order 8/13 correct ✅\n",
+            "Quasi-order 9/13 correct ✅\n",
+            "Quasi-order 10/13 correct ✅\n",
+            "Quasi-order 11/13 incorrect ❌\n",
+            "Test: [(0, 1), (0, 2), (0, 3), (0, 4), (1, 0), (1, 2), (1, 3), (1, 4), (2, 0), (2, 1), (2, 3), (2, 4), (3, 4), (4, 3)]\n",
+            "Correct: [(0, 1), (0, 2), (0, 3), (0, 4), (1, 0), (1, 2), (1, 3), (1, 4), (2, 3), (2, 4), (3, 2), (3, 4), (4, 2), (4, 3)]\n",
+            "Quasi-order 12/13 correct ✅\n"
+          ]
+        }
+      ],
       "source": [
         "from ind_gen import ind_gen\n",
         "correct_qos = ind_gen(correct_ce)\n",
@@ -200,39 +187,21 @@
         "    print(f'Quasi-order {i}/{len(correct_qos)} incorrect ❌')\n",
         "    print(f'Test: {test_qo}')\n",
         "    print(f'Correct: {corr_qo}')"
-      ],
-      "metadata": {
-        "id": "Ywvri9o8bGA0",
-        "outputId": "022507e2-14ac-41bd-ac40-40196d913d75",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 60,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Correct number of quasi-orders ✅\n",
-            "Quasi-order 0/13 correct ✅\n",
-            "Quasi-order 1/13 correct ✅\n",
-            "Quasi-order 2/13 correct ✅\n",
-            "Quasi-order 3/13 correct ✅\n",
-            "Quasi-order 4/13 correct ✅\n",
-            "Quasi-order 5/13 correct ✅\n",
-            "Quasi-order 6/13 correct ✅\n",
-            "Quasi-order 7/13 correct ✅\n",
-            "Quasi-order 8/13 correct ✅\n",
-            "Quasi-order 9/13 correct ✅\n",
-            "Quasi-order 10/13 correct ✅\n",
-            "Quasi-order 11/13 incorrect ❌\n",
-            "Test: [(0, 1), (0, 2), (0, 3), (0, 4), (1, 0), (1, 2), (1, 3), (1, 4), (2, 0), (2, 1), (2, 3), (2, 4), (3, 4), (4, 3)]\n",
-            "Correct: [(0, 1), (0, 2), (0, 3), (0, 4), (1, 0), (1, 2), (1, 3), (1, 4), (2, 3), (2, 4), (3, 2), (3, 4), (4, 2), (4, 3)]\n",
-            "Quasi-order 12/13 correct ✅\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
