fix: imports in quasi-order-gen test

--- a/test_ipynbs/quasi-order-gen.ipynb
+++ b/test_ipynbs/quasi-order-gen.ipynb
@@ -20,58 +20,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bvA-pXFUN36a",
-        "outputId": "f864636a-574e-49a6-a9a2-28c50349a402"
+        "outputId": "fefbb9ca-5eb1-41ec-da36-fc31f7de1093"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Cloning into 'iita_python'...\n",
-            "remote: Enumerating objects: 68, done.\u001b[K\n",
-            "remote: Counting objects: 100% (68/68), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (43/43), done.\u001b[K\n",
-            "remote: Total 68 (delta 27), reused 56 (delta 19), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (68/68), 15.89 KiB | 602.00 KiB/s, done.\n",
-            "Resolving deltas: 100% (27/27), done.\n",
-            "Cloning into 'kst'...\n",
-            "remote: Enumerating objects: 287, done.\u001b[K\n",
-            "remote: Counting objects: 100% (1/1), done.\u001b[K\n",
-            "remote: Total 287 (delta 0), reused 0 (delta 0), pack-reused 286 (from 3)\u001b[K\n",
-            "Receiving objects: 100% (287/287), 133.09 KiB | 1.29 MiB/s, done.\n",
-            "Resolving deltas: 100% (139/139), done.\n",
+            "fatal: destination path 'iita_python' already exists and is not an empty directory.\n",
+            "fatal: destination path 'kst' already exists and is not an empty directory.\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (2.0.2)\n",
             "Requirement already satisfied: pandas in /usr/local/lib/python3.12/dist-packages (2.2.2)\n",
             "Requirement already satisfied: numpy>=1.26.0 in /usr/local/lib/python3.12/dist-packages (from pandas) (2.0.2)\n",
             "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas) (2.9.0.post0)\n",
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas) (2025.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas) (2025.2)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-            "Collecting cycler==0.11.0 (from -r kst/requirements.txt (line 1))\n",
-            "  Downloading cycler-0.11.0-py3-none-any.whl.metadata (785 bytes)\n",
-            "Collecting fonttools==4.28.2 (from -r kst/requirements.txt (line 2))\n",
-            "  Downloading fonttools-4.28.2-py3-none-any.whl.metadata (117 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m117.2/117.2 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting kiwisolver==1.3.2 (from -r kst/requirements.txt (line 3))\n",
-            "  Downloading kiwisolver-1.3.2.tar.gz (54 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m54.6/54.6 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Collecting matplotlib==3.5.0 (from -r kst/requirements.txt (line 4))\n",
-            "  Downloading matplotlib-3.5.0.tar.gz (35.0 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m35.0/35.0 MB\u001b[0m \u001b[31m51.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Collecting nose==1.3.7 (from -r kst/requirements.txt (line 5))\n",
-            "  Downloading nose-1.3.7-py3-none-any.whl.metadata (1.7 kB)\n",
-            "\u001b[31mERROR: Ignored the following versions that require a different python version: 1.21.2 Requires-Python >=3.7,<3.11; 1.21.3 Requires-Python >=3.7,<3.11; 1.21.4 Requires-Python >=3.7,<3.11; 1.21.5 Requires-Python >=3.7,<3.11; 1.21.6 Requires-Python >=3.7,<3.11\u001b[0m\u001b[31m\n",
-            "\u001b[0m\u001b[31mERROR: Could not find a version that satisfies the requirement numpy==1.21.4 (from versions: 1.3.0, 1.4.1, 1.5.0, 1.5.1, 1.6.0, 1.6.1, 1.6.2, 1.7.0, 1.7.1, 1.7.2, 1.8.0, 1.8.1, 1.8.2, 1.9.0, 1.9.1, 1.9.2, 1.9.3, 1.10.0.post2, 1.10.1, 1.10.2, 1.10.4, 1.11.0, 1.11.1, 1.11.2, 1.11.3, 1.12.0, 1.12.1, 1.13.0, 1.13.1, 1.13.3, 1.14.0, 1.14.1, 1.14.2, 1.14.3, 1.14.4, 1.14.5, 1.14.6, 1.15.0, 1.15.1, 1.15.2, 1.15.3, 1.15.4, 1.16.0, 1.16.1, 1.16.2, 1.16.3, 1.16.4, 1.16.5, 1.16.6, 1.17.0, 1.17.1, 1.17.2, 1.17.3, 1.17.4, 1.17.5, 1.18.0, 1.18.1, 1.18.2, 1.18.3, 1.18.4, 1.18.5, 1.19.0, 1.19.1, 1.19.2, 1.19.3, 1.19.4, 1.19.5, 1.20.0, 1.20.1, 1.20.2, 1.20.3, 1.21.0, 1.21.1, 1.22.0, 1.22.1, 1.22.2, 1.22.3, 1.22.4, 1.23.0, 1.23.1, 1.23.2, 1.23.3, 1.23.4, 1.23.5, 1.24.0, 1.24.1, 1.24.2, 1.24.3, 1.24.4, 1.25.0, 1.25.1, 1.25.2, 1.26.0, 1.26.1, 1.26.2, 1.26.3, 1.26.4, 2.0.0, 2.0.1, 2.0.2, 2.1.0, 2.1.1, 2.1.2, 2.1.3, 2.2.0, 2.2.1, 2.2.2, 2.2.3, 2.2.4, 2.2.5, 2.2.6, 2.3.0, 2.3.1, 2.3.2, 2.3.3, 2.3.4, 2.3.5)\u001b[0m\u001b[31m\n",
-            "\u001b[0m\u001b[31mERROR: No matching distribution found for numpy==1.21.4\u001b[0m\u001b[31m\n",
-            "\u001b[0m"
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n"
           ]
         }
       ],
@@ -80,13 +50,13 @@
         "!git clone https://github.com/milansegedinac/kst.git\n",
         "!pip install numpy\n",
         "!pip install pandas\n",
-        "!pip install -r kst/requirements.txt\n",
         "import sys\n",
         "sys.path.append(\"/content/iita_python\")\n",
-        "sys.path.append(\"/content/kst/learning_spaces/kst\")\n",
+        "sys.path.append(\"/content/kst\")\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import iita_python as iita"
+        "import iita_python as iita\n",
+        "import learning_spaces.kst as kst"
       ]
     },
     {
@@ -100,18 +70,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FvSAv-4cOWQp",
-        "outputId": "06ba7475-bc54-4342-d798-beccf13279a9"
+        "outputId": "4d1adf29-3d0c-40cf-d79d-9a8df3d9f945"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Data imported successfully ✅\n"
           ]
@@ -136,18 +106,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lWysv1UsTGPf",
-        "outputId": "56d1d225-912f-4110-82ce-ccee9aefee54"
+        "outputId": "d24fc04a-e60d-45c6-ce95-c77f859df45e"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Counterexamples computed correctly ✅\n"
           ]
@@ -156,8 +126,7 @@
       "source": [
         "data = iita.Dataset(data_raw)\n",
         "\n",
-        "from ob_counter import ob_counter\n",
-        "correct_ce = ob_counter(data_raw)\n",
+        "correct_ce = kst.ob_counter(data_raw)\n",
         "\n",
         "try:\n",
         "  assert (correct_ce == data.counterexamples.to_numpy()).all()\n",
@@ -177,18 +146,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ywvri9o8bGA0",
-        "outputId": "d8b9c89e-977e-4249-d68f-8fa820ce30d1"
+        "outputId": "438b2adf-3bb1-4784-cab7-ff32228d5eab"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Correct number of quasi-orders ✅\n",
             "Quasi-order 0/13 correct ✅\n",
@@ -208,11 +177,10 @@
         }
       ],
       "source": [
-        "from ind_gen import ind_gen\n",
-        "correct_qos = ind_gen(correct_ce)\n",
+        "correct_qos = kst.ind_gen(correct_ce)\n",
         "\n",
         "unfolded_ce = iita.unfold_examples(data.counterexamples)\n",
-        "test_qos = iita.ind_gen(unfolded_ce, data.ce.shape[0])\n",
+        "test_qos = iita.ind_gen(unfolded_ce, data.items)\n",
         "test_qos = [sorted([(int(a), int(b)) for a, b in iita.quasiorder.get_edge_list(qo)]) for qo in test_qos]\n",
         "\n",
         "try:\n",
