feat: original iita fit metric testing

--- a/test_ipynbs/fit_metrics.ipynb
+++ b/test_ipynbs/fit_metrics.ipynb
@@ -1,19 +1,177 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "aefc5a77",
-   "metadata": {},
-   "source": [
-    "INIT"
-   ]
-  }
- ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "id": "aefc5a77",
+      "metadata": {
+        "id": "aefc5a77"
+      },
+      "source": [
+        "# Testing the fit metric calculation on the PISA dataset, comparing to the KST library by Milan Segedinac"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Imporitng both libraries and requirements"
+      ],
+      "metadata": {
+        "id": "dzpt8hYXs7kO"
+      },
+      "id": "dzpt8hYXs7kO"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/Alexe1900/iita_python.git\n",
+        "!git clone https://github.com/milansegedinac/kst.git\n",
+        "!pip install numpy\n",
+        "!pip install pandas\n",
+        "import sys\n",
+        "sys.path.append(\"/content/iita_python\")\n",
+        "sys.path.append(\"/content/kst\")\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import iita_python as test_iita\n",
+        "import learning_spaces.kst as kst"
+      ],
+      "metadata": {
+        "id": "s4P_gsz7tDlG",
+        "outputId": "e6e1ae27-d238-4cb3-b4e0-dbee88262647",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "s4P_gsz7tDlG",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'iita_python'...\n",
+            "remote: Enumerating objects: 92, done.\u001b[K\n",
+            "remote: Counting objects: 100% (92/92), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (63/63), done.\u001b[K\n",
+            "remote: Total 92 (delta 38), reused 71 (delta 23), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (92/92), 20.69 KiB | 6.90 MiB/s, done.\n",
+            "Resolving deltas: 100% (38/38), done.\n",
+            "Cloning into 'kst'...\n",
+            "remote: Enumerating objects: 287, done.\u001b[K\n",
+            "remote: Counting objects: 100% (1/1), done.\u001b[K\n",
+            "remote: Total 287 (delta 0), reused 0 (delta 0), pack-reused 286 (from 3)\u001b[K\n",
+            "Receiving objects: 100% (287/287), 133.09 KiB | 1.71 MiB/s, done.\n",
+            "Resolving deltas: 100% (139/139), done.\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (2.0.2)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.12/dist-packages (2.2.2)\n",
+            "Requirement already satisfied: numpy>=1.26.0 in /usr/local/lib/python3.12/dist-packages (from pandas) (2.0.2)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas) (2.9.0.post0)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas) (2025.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas) (2025.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Importing the dataset, generating quasi-orders"
+      ],
+      "metadata": {
+        "id": "Wwxr0c_rtSMN"
+      },
+      "id": "Wwxr0c_rtSMN"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from iita_python.utils import read_rp\n",
+        "\n",
+        "data_raw = read_rp(\"iita_python/test_ipynbs/pisa.csv\")\n",
+        "data = test_iita.Dataset(data_raw)\n",
+        "\n",
+        "unfolded_ce = test_iita.unfold_examples(data.counterexamples)\n",
+        "qos = test_iita.ind_gen(unfolded_ce, data.items)"
+      ],
+      "metadata": {
+        "id": "7CZKj4kktWg6"
+      },
+      "id": "7CZKj4kktWg6",
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Testing the fit metrics"
+      ],
+      "metadata": {
+        "id": "t-RqTjTEuBUo"
+      },
+      "id": "t-RqTjTEuBUo"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "correct_metrics = kst.iita(data.response_patterns, 3)['diff']\n",
+        "\n",
+        "for i, qo in enumerate(qos):\n",
+        "  test_metric = round(test_iita.orig_iita_fit(data, qo), 3)\n",
+        "  corr_metric = round(correct_metrics[i], 3)\n",
+        "\n",
+        "  try:\n",
+        "    assert (test_metric == corr_metric)\n",
+        "    print(f'Fit metric {i}/{len(qos)} correct ✅')\n",
+        "  except AssertionError:\n",
+        "    print(f'Fit metric {i}/{len(qos)} incorrect ❌')\n",
+        "    print(f'Test: {test_metric}')\n",
+        "    print(f'Correct: {corr_metric}')"
+      ],
+      "metadata": {
+        "id": "a5IvxR1I7-BG",
+        "outputId": "be967830-9d84-416a-f821-a73ad8c9154c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "a5IvxR1I7-BG",
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fit metric 0/13 correct ✅\n",
+            "Fit metric 1/13 correct ✅\n",
+            "Fit metric 2/13 correct ✅\n",
+            "Fit metric 3/13 correct ✅\n",
+            "Fit metric 4/13 correct ✅\n",
+            "Fit metric 5/13 correct ✅\n",
+            "Fit metric 6/13 correct ✅\n",
+            "Fit metric 7/13 correct ✅\n",
+            "Fit metric 8/13 correct ✅\n",
+            "Fit metric 9/13 correct ✅\n",
+            "Fit metric 10/13 correct ✅\n",
+            "Fit metric 11/13 correct ✅\n",
+            "Fit metric 12/13 correct ✅\n"
+          ]
+        }
+      ]
+    }
+  ],
+  "metadata": {
+    "language_info": {
+      "name": "python"
+    },
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
