refactor: quasiorder class to avoid loose functions

--- a/test_ipynbs/quasi-order-gen.ipynb
+++ b/test_ipynbs/quasi-order-gen.ipynb
@@ -181,7 +181,7 @@
         "\n",
         "unfolded_ce = iita.unfold_examples(data.counterexamples)\n",
         "test_qos = iita.ind_gen(unfolded_ce, data.items)\n",
-        "test_qos = [sorted([(int(a), int(b)) for a, b in iita.quasiorder.get_edge_list(qo)]) for qo in test_qos]\n",
+        "test_qos = [sorted([(int(a), int(b)) for a, b in qo.get_edge_list()]) for qo in test_qos]\n",
         "\n",
         "try:\n",
         "  assert len(correct_qos) == len(test_qos)\n",
