--- a/test_ipynbs/fit_metrics.ipynb
+++ b/test_ipynbs/fit_metrics.ipynb
@@ -37,7 +37,7 @@
       ],
       "metadata": {
         "id": "s4P_gsz7tDlG",
-        "outputId": "e6e1ae27-d238-4cb3-b4e0-dbee88262647",
+        "outputId": "03b37282-44e0-43f1-996e-ba3de8248eab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -49,19 +49,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'iita_python'...\n",
-            "remote: Enumerating objects: 92, done.\u001b[K\n",
-            "remote: Counting objects: 100% (92/92), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (63/63), done.\u001b[K\n",
-            "remote: Total 92 (delta 38), reused 71 (delta 23), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (92/92), 20.69 KiB | 6.90 MiB/s, done.\n",
-            "Resolving deltas: 100% (38/38), done.\n",
-            "Cloning into 'kst'...\n",
-            "remote: Enumerating objects: 287, done.\u001b[K\n",
-            "remote: Counting objects: 100% (1/1), done.\u001b[K\n",
-            "remote: Total 287 (delta 0), reused 0 (delta 0), pack-reused 286 (from 3)\u001b[K\n",
-            "Receiving objects: 100% (287/287), 133.09 KiB | 1.71 MiB/s, done.\n",
-            "Resolving deltas: 100% (139/139), done.\n",
+            "fatal: destination path 'iita_python' already exists and is not an empty directory.\n",
+            "fatal: destination path 'kst' already exists and is not an empty directory.\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (2.0.2)\n",
             "Requirement already satisfied: pandas in /usr/local/lib/python3.12/dist-packages (2.2.2)\n",
             "Requirement already satisfied: numpy>=1.26.0 in /usr/local/lib/python3.12/dist-packages (from pandas) (2.0.2)\n",
@@ -112,13 +101,24 @@
       "id": "t-RqTjTEuBUo"
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "3.1. Original IITA fit metric"
+      ],
+      "metadata": {
+        "id": "oXyUJR12jT22"
+      },
+      "id": "oXyUJR12jT22"
+    },
+    {
       "cell_type": "code",
       "source": [
-        "correct_metrics = kst.iita(data.response_patterns, 3)['diff']\n",
+        "import iita_python.fit_metrics as test_fit\n",
+        "corrects = kst.iita(data.response_patterns, 3)['diff']\n",
         "\n",
         "for i, qo in enumerate(qos):\n",
-        "  test_metric = round(test_iita.orig_iita_fit(data, qo), 3)\n",
-        "  corr_metric = round(correct_metrics[i], 3)\n",
+        "  test_metric = round(test_fit.orig_iita_fit(data, qo), 3)\n",
+        "  corr_metric = round(corrects[i], 3)\n",
         "\n",
         "  try:\n",
         "    assert (test_metric == corr_metric)\n",
@@ -130,13 +130,71 @@
       ],
       "metadata": {
         "id": "a5IvxR1I7-BG",
-        "outputId": "be967830-9d84-416a-f821-a73ad8c9154c",
+        "outputId": "abc3c1be-79b3-4721-9c7c-a6e0e6669ba7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "a5IvxR1I7-BG",
-      "execution_count": 6,
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fit metric 0/13 correct ✅\n",
+            "Fit metric 1/13 correct ✅\n",
+            "Fit metric 2/13 correct ✅\n",
+            "Fit metric 3/13 correct ✅\n",
+            "Fit metric 4/13 correct ✅\n",
+            "Fit metric 5/13 correct ✅\n",
+            "Fit metric 6/13 correct ✅\n",
+            "Fit metric 7/13 correct ✅\n",
+            "Fit metric 8/13 correct ✅\n",
+            "Fit metric 9/13 correct ✅\n",
+            "Fit metric 10/13 correct ✅\n",
+            "Fit metric 11/13 correct ✅\n",
+            "Fit metric 12/13 correct ✅\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3.2. Corrected fit metric"
+      ],
+      "metadata": {
+        "id": "VIPtCas5jXP3"
+      },
+      "id": "VIPtCas5jXP3"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "corrects = kst.iita(data.response_patterns, 2)['diff']\n",
+        "\n",
+        "for i, qo in enumerate(qos):\n",
+        "  test_metric = round(test_fit.corr_iita_fit(data, qo), 3)\n",
+        "  corr_metric = round(corrects[i], 3)\n",
+        "\n",
+        "  try:\n",
+        "    assert (test_metric == corr_metric)\n",
+        "    print(f'Fit metric {i}/{len(qos)} correct ✅')\n",
+        "  except AssertionError:\n",
+        "    print(f'Fit metric {i}/{len(qos)} incorrect ❌')\n",
+        "    print(f'Test: {test_metric}')\n",
+        "    print(f'Correct: {corr_metric}')"
+      ],
+      "metadata": {
+        "id": "j1LoyigWjc5t",
+        "outputId": "bd2ca738-1a94-4ce8-b507-325a1acdf9e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "j1LoyigWjc5t",
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
