feat: segmented fit metrics, adding a decorator to bundle calculation functions

--- a/test_ipynbs/quasi-order-gen.ipynb
+++ b/test_ipynbs/quasi-order-gen.ipynb
@@ -48,8 +48,8 @@
       "source": [
         "!git clone https://github.com/Alexe1900/iita_python.git\n",
         "!git clone https://github.com/milansegedinac/kst.git\n",
-        "!pip install numpy\n",
-        "!pip install pandas\n",
+        "%pip install numpy\n",
+        "%pip install pandas\n",
         "import sys\n",
         "sys.path.append(\"/content/iita_python\")\n",
         "sys.path.append(\"/content/kst\")\n",
